# SME

./: .gitignore  STENCIL_SME_FLOW.md  sme_min.cpp  stencil_sme.cpp
llvm-pass-flow/: CMakeLists.txt  PASS_DESIGN.md  README.md
llvm-pass-flow/scripts/: build_pass.sh  build_pass_direct.sh  build_pass_macos_dynamic.sh  check_toolchain.sh  profile_counters.sh  run_pass.sh
llvm-pass-flow/src/: StencilPrefetchPass.cpp
